--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -54,10 +54,10 @@ h1, h2, h3, h4 {
 }
 
 .list-box {
-  min-height: 500px;
+  min-height: 300px;
   // border: solid gray;
 //  margin-top: 10px;
-  margin-bottom: 10px;
+  margin-bottom: 30px;
   margin-right: 10px;
   margin-left: 10px;
   border-radius: 8px;
@@ -66,6 +66,7 @@ h1, h2, h3, h4 {
   // background-color: #D0D0DD ;
   color: black;
   width: 340px;
+  overflow-y: scroll;
 }
 
 .nav-links > li {
