--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -19,7 +19,6 @@
 #main {
 
   width: 80%;
-  overflow-y: scroll;
 }
 .boards {
   margin-top: 40px
@@ -211,8 +210,8 @@ a.navbar-link {
   background-color: rgba(255,255,255,0.4);
   border: thin light gray;
   position: absolute;
-  top: 25%;
-  left: 38%;
+  top: 26%;
+  left: 32%;
   padding: 30px;
   font-size: x-large;
 }
@@ -326,6 +325,7 @@ input[type=checkbox] {
   color: white;
   position: absolute;
   top: 100%;
+  bottom: 0%;
   width: 100%;
 }
 
